--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ne-gulp",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "description",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,14 @@
   },
   "homepage": "https://github.com/node-engine/ne-gulp#readme",
   "dependencies": {
+    "autoprefixer": "^6.0.3",
+    "gulp": "^3.9.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-stylus": "^2.1.0",
+    "lost": "^6.6.2",
+    "precss": "^1.2.3",
+    "rucksack-css": "^0.8.5",
+    "rupture": "^0.6.1",
     "stringify-object": "^2.3.0"
   }
 }
