--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ne-gulp",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "description",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,10 @@
   "homepage": "https://github.com/node-engine/ne-gulp#readme",
   "dependencies": {
     "autoprefixer": "^6.0.3",
+    "del": "^2.0.2",
     "gulp": "^3.9.0",
+    "gulp-babel": "^5.3.0",
+    "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.1.0",
     "lost": "^6.6.2",
