--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ne-gulp",
-  "version": "1.5.5",
+  "version": "1.5.6",
   "description": "description",
   "main": "index.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "rucksack-css": "^0.8.5",
     "rupture": "^0.6.1",
     "stringify-object": "^2.3.0",
+    "webpack": "^1.12.2",
     "webpack-stream": "^2.1.1"
   }
 }
