--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ne-gulp",
-  "version": "1.5.6",
+  "version": "1.5.7",
   "description": "description",
   "main": "index.js",
   "scripts": {
@@ -23,12 +23,16 @@
   "homepage": "https://github.com/node-engine/ne-gulp#readme",
   "dependencies": {
     "autoprefixer": "^6.0.3",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.1.0",
+    "json-loader": "^0.5.3",
     "lost": "^6.6.2",
     "ne-auto-off": "^1.0.0",
     "precss": "^1.2.3",
